--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <img src="img/Logo.png" alt="meu logo">
     </header>
-    <h1>Titulo da página</h1>  
+    <h1>Coxinhas Variadas</h1>
     <aside class="text"> <!-- além de ser usado para a ajudar em sidebars ou menu lateral, pode ser usado para criar um conteúdo de apoio/adicional ao conteúdo principal.-->
         <h2>
             Primeiros tópicos
