Ajustes para remover tags br

--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
             
         </section>
         <section class="receita">
-            <p>
-                Pegue o morango, jogue na panela de brigadeiro.<br>
-                Aguarde.<br>
-                Pegue o palito e passe no granulado que está no prato.<br>
-                Coma. <br>
-            </p>
-            <div class="Tutorial">
+            <p>Pegue o morango, jogue na panela de brigadeiro.</p>
+            <p>Aguarde.</p>
+            <p>Pegue o palito e passe no granulado que está no prato.</p>
+            <p>Coma.</p>
+            <div class="tutorial">
                 
                     <!--<p class="legenda">mood de segunda feira</p>-->
                     <img id="coxinha" src="img/coxinha.png" alt="coxinhas de chocolate com morango">
